fix: more adjustment of responsive view on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,11 +3,23 @@
 @tailwind utilities;
 
 .default__layout {
-  @apply grid gap-1 grid-cols-1 grid-rows-1 lg:grid-cols-5 lg:grid-rows-4 xl:grid-cols-5 xl:grid-rows-4 2xl:grid-cols-5 2xl:grid-rows-4 items-center h-screen;
+  @apply grid gap-1 grid-cols-1 grid-rows-1 sm:grid-cols-5 sm:grid-rows-4 md:grid-cols-5 md:grid-rows-4 lg:grid-cols-5 lg:grid-rows-4 xl:grid-cols-5 xl:grid-rows-4 2xl:grid-cols-5 2xl:grid-rows-4 items-center h-screen;
 }
 
 .index__page {
-  @apply bg-slate-800 rounded-md px-16 mx-28 sm:mx-32 md:mx-36 lg:mx-5 xl:px-24 2xl:px-32 py-24 md:py-40 lg:py-40 xl:py-56 2xl:py-64 lg:col-span-3 lg:row-span-4 lg:col-start-2 xl:col-span-3 xl:row-span-4 xl:col-start-2 2xl:col-span-3 2xl:row-span-4 2xl:col-start-2;
+  @apply bg-slate-800 rounded-md mx-10;
+}
+
+.index__page-cr-span-start {
+  @apply sm:col-span-3 sm:row-span-4 sm:col-start-2 md:col-span-3 md:row-span-4 md:col-start-2 lg:col-span-3 lg:row-span-4 lg:col-start-2 xl:col-span-3 xl:row-span-4 xl:col-start-2 2xl:col-span-3 2xl:row-span-4 2xl:col-start-2;
+}
+
+.index__page-px {
+  @apply px-10 sm:px-0 md:px-0 lg:px-5 xl:px-24 2xl:px-32;
+}
+
+.index__page-py {
+  @apply py-24 md:py-40 lg:py-40 xl:py-56 2xl:py-64;
 }
 
 .index__page-nickname {
